--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="about secondary-bg">
             <h3 class="section-title">about me</h3>
             <p class="section-description">
-                  hi,i am Sahil. Today i am going to make a portfolio website.
+                 hi,i  am Sahil. Today i am going to make a portfolio website.
             i am a beginer coader.if i did mistake anything currect me to the mistake.thank you everyone.
         </p>
             </p>
@@ -63,9 +63,108 @@
                 </div>
             </div>
         </section>
+        <sections class="skills">
+            <h3 class="section-title text-center">what i do</h3>
+            <p class="section-description text-center">
+                hi,i  am Sahil. Today i am going to make a portfolio website.
+            i am a beginer coader.if i did mistake anything currect me to the mistake.thank you everyone.
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/js.png" alt="">
+                    <h4 class="skill-title">vanilla javascript</h4>
+                    <p class="skill-description">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/react.png" alt="">
+                    <h4 class="skill-title">react</h4>
+                    <p class="skill-description">React is a JavaScript library for building user interfaces, developed and maintained by Meta formerly Facebook.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/nodejs.png" alt="">
+                    <h4 class="skill-title">node.js</h4>
+                    <p class="skill-description">Node.js is an open-source, cross-platform JavaScript runtime environment that allows developers to execute JavaScript code outside of a web browser.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/mongo.png" alt="">
+                    <h4 class="skill-title">mongodb</h4>
+                    <p class="skill-description">MongoDB is a popular, open-source NoSQL database that uses a document-oriented data model. It stores data in flexible, JSON-like documents, making it suitable for handling various data types and evolving application needs.</p>
+                </div>
+            </div>
+        </sections>
+        <section class="resume">
+            <h3 class="section-title text-center">A summary of my resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">my education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">masters in bba</h4>
+                        <h5 class="experience-sub-title">AIUB</h5>
+                        <div class="experience-descriptiond">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">masters in bba</h4>
+                        <h5 class="experience-sub-title">AIUB</h5>
+                        <div class="experience-descriptiond">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">masters in bba</h4>
+                        <h5 class="experience-sub-title">AIUB</h5>
+                        <div class="experience-descriptiond">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</div>
+                    </div>
+                </div>
+                <hr>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">my experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">masters in bba</h4>
+                        <h5 class="experience-sub-title">AIUB</h5>
+                        <div class="experience-descriptiond">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">masters in bba</h4>
+                        <h5 class="experience-sub-title">AIUB</h5>
+                        <div class="experience-descriptiond">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">masters in bba</h4>
+                        <h5 class="experience-sub-title">AIUB</h5>
+                        <div class="experience-descriptiond">JavaScript is a high-level, interpreted programming language primarily used to add interactivity to websites, but it also has applications in backend development through Node.js.</div>
+                    </div>
+                </div>
+              
+                </div>
+                  <div class="text-center resume-download-cv">
+                    <button class="btn-primary">download cv</button>
+            </div>
+        </section>
+
 
     </main>
-    <footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">lets connect</h3>
+            <p>please fill out the form on this section to contact with me or call between 9:am or 8:pm et,monday through friday</p>
+
+        </div>
+        <div>
+            <a href=""><img src="images/facebook.png" alt=""></a>
+            <a href=""><img src="images/instagram.jfif" alt=""></a>
+            <a href=""><img src="images/twitter.png" alt=""></a>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">let's message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="your name">
+                <input type="email" name="" id="" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="message"></textarea>
+                <input class="btn-primary" type="button" value="submit">
+            </form>
+        </div>
 
     </footer>
 </body>
