--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
             Today i am going to make a portfolio website.
             i am a beginer coader.if i did mistake anything currect me to the mistake.thank you everyone.
         </p>
-        <button class="btn-primary">download CV</button>
-        <button class="btn-primary">contact</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i>download CV</button>
+        <button class="btn-primary"> <i class="fa-solid fa-phone"></i>contact</button>
 
     </div>
     <img class="banner-profile-pic" src="images/sahil.png.JPG" alt="">
 </div>
+<script src="https://kit.fontawesome.com/b6dfa70679.js" crossorigin="anonymous"></script>
 
     </header>
     <main>
@@ -139,7 +140,7 @@
               
                 </div>
                   <div class="text-center resume-download-cv">
-                    <button class="btn-primary">download cv</button>
+                    <button class="btn-primary"><i class="fa-solid fa-download"></i>download cv</button>
             </div>
         </section>
 
